--- a/html/blog.html
+++ b/html/blog.html
@@ -27,53 +27,53 @@
       <span></span>
       <span></span>
     </div>
-    <div id="firstview">
-      <div class="wrap">
-        <h1 class="catchcopy">社員ブログ</h1>
-      </div>
-    </div>
   </header>
+  <div id="firstview">
+    <div class="wrap">
+      <h1 class="catchcopy">社員ブログ</h1>
+    </div>
+  </div>
   <main>
     <section id="blog">
       <div class="blog-list">
         <article class="blog-item">
           <a href="#" class="blog-item-thumbnail">
-            <img src="/img 3/blog.png" alt="会社を創業した理由">
+            <img src="/img/blog.png" alt="会社を創業した理由">
           </a>
           <p class="blog-item-date">2019/07/17</p>
           <h2 class="blog-item-title">会社を創業した理由</h2>
         </article>
         <article class="blog-item">
          <a href="#" class="blog-item-thumbnail">
-           <img src="/img 3/blog.png" alt="ITエンジニアを育成する最強メソッド">
+           <img src="/img/blog.png" alt="ITエンジニアを育成する最強メソッド">
          </a>
          <p class="blog-item-date">2019/11/11</p>
          <h2 class="blog-item-title">ITエンジニアを育成する最強メソッド</h2>
        </article>
        <article class="blog-item">
          <a href="#" class="blog-item-thumbnail">
-           <img src="/img 3/blog.png" alt="コーチングによるモチベーション向上理論">
+           <img src="/img/blog.png" alt="コーチングによるモチベーション向上理論">
          </a>
          <p class="blog-item-date">2020/08/01</p>
          <h2 class="blog-item-title">コーチングによるモチベーション向上理論</h2>
        </article>
        <article class="blog-item">
           <a href="#" class="blog-item-thumbnail">
-            <img src="/img 3/blog.png" alt="プログラミング言語習得論">
+            <img src="/img/blog.png" alt="プログラミング言語習得論">
           </a>
           <p class="blog-item-date">2020/09/10</p>
           <h2 class="blog-item-title">プログラミング言語習得論</h2>
        </article>
        <article class="blog-item">
           <a href="#" class="blog-item-thumbnail">
-            <img src="/img 3/blog.png" alt="エンジニア採用における注意点">
+            <img src="/img/blog.png" alt="エンジニア採用における注意点">
           </a>
           <p class="blog-item-date">2020/12/01</p>
           <h2 class="blog-item-title">エンジニア採用における注意点</h2>
         </article>
         <article class="blog-item">
           <a href="#" class="blog-item-thumbnail">
-            <img src="/img 3/blog.png" alt="今年の抱負">
+            <img src="/img/blog.png" alt="今年の抱負">
           </a>
           <p class="blog-item-date">2021/01/01</p>
           <h2 class="blog-item-title">今年の抱負</h2>
@@ -91,18 +91,18 @@
   <footer class="footer">
     <div class="footer-inner">
       <small class="footer copyright">Copyright 2020 TECH inc.</small>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
+          <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
+          <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
+          <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
+          <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
+          <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="footer-nav">
-      <ul class="footer-nav-list">
-        <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
-        <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
-        <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
-        <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-        <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
-        <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-        <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
-      </ul>
-    </nav>
   </footer>  
 </body>
 </html>
