--- a/html/index.html
+++ b/html/index.html
@@ -35,13 +35,13 @@
         <p class="catchcopy-en">Solving social issues with the latest technology</p>
       </div>
     </div>
-    <div id="top-future">
+    <div class="top-feature">
       <div class="inner">
         <h2 class="title">株式会社TECHの想い</h2>
         <p class="txt">あらゆる産業において、新たなデジタル技術を使ってこれまでにないビジネスモデルを展開する新規参入者が登場し、ゲームチェンジが起ころうとしています。こうした中で、各企業は、競争力維持・強化のために、DXを迅速に進めていくことが求められています。しかし、DXにおいて投資コストは非常にかかります。株式会社TECHでは独自のオペレーションと人材教育により、他社よりも価格を抑えた開発を行います。</p>
       </div>
     </div>
-    <section id="service">
+    <section class="service">
       <h2 class="service-title">サービス</h2>
       <div class="service-list">
         <section class="service-item">
@@ -75,8 +75,8 @@
       </div>
       <a href="/html/service.html" class="service-btn btn btn-primary">サービス一覧をみる</a>
     </section>
-   <section id="news">
-     <div class="news-inner-wrap">
+   <section class="news">
+     <div class="news-inner">
        <div class="news-head">
          <h2 class="news-title">ニュース</h2>
          <a href="/html/news.html" class="news-btn btn btn-primary">ニュース一覧をみる</a>
@@ -103,7 +103,7 @@
        </div>
      </div>
    </section> 
-   <section id="blog">
+   <section class="blog">
      <h3 class="blog-title">社員ブログ</h3>
      <div class="blog-list">
        <article class="blog-item">
@@ -130,7 +130,7 @@
      </div>
      <a href="/html/blog.html" class="blog-btn btn btn-primary">サービス一覧をみる</a>
    </section>
-   <div id="company-list">
+   <div class="company-list">
       <section class="company-item">
         <a href="/html/company.html" class="company-link">会社概要</a>
       </section>
@@ -149,18 +149,18 @@
   <footer class="footer">
     <div class="footer-inner">
       <small class="footer copyright">Copyright 2020 TECH inc.</small>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
+          <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
+          <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
+          <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
+          <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
+          <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="footer-nav">
-      <ul class="footer-nav-list">
-        <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
-        <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
-        <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
-        <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-        <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
-        <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-        <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
-      </ul>
-    </nav>
   </footer> 
 </body>
 </html>
