--- a/html/company.html
+++ b/html/company.html
@@ -27,14 +27,14 @@
       <span></span>
       <span></span>
     </div>
-    <div id="firstview">
-      <div class="wrap">
-        <h2 class="catchcopy">会社概要</h2>
-      </div>
-    </div>
   </header>
+  <div id="firstview">
+    <div class="wrap">
+      <h2 class="catchcopy">会社概要</h2>
+    </div>
+  </div>
   <main>
-    <section id="company-wrap">
+    <section class="company-wrap">
       <table class="company-info">
         <tbody>
           <tr>
@@ -75,18 +75,18 @@
   <footer class="footer">
     <div class="footer-inner">
       <small class="footer copyright">Copyright 2020 TECH inc.</small>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
+          <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
+          <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
+          <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
+          <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
+          <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="footer-nav">
-      <ul class="footer-nav-list">
-        <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
-        <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
-        <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
-        <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-        <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
-        <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-        <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
-      </ul>
-    </nav>
   </footer>  
 </body>
 </html>
