--- a/html/recruit.html
+++ b/html/recruit.html
@@ -27,15 +27,15 @@
       <span></span>
       <span></span>
     </div>
-    <div id="firstview">
-      <div class="wrap">
-        <h2 class="catchcopy">採用情報</h2>
-      </div>
-    </div>
   </header>
+  <div id="firstview">
+    <div class="wrap">
+      <h2 class="catchcopy">採用情報</h2>
+    </div>
+  </div>
   <main>
-    <section class="recruit-wrap recruit-type">
-      <div class="recruit-new-graduate">
+    <section class="recruit-wrap">
+      <div class="recruit-new-graduate recruit-type">
         <h2 class="recruit-title">新卒採用</h2>
         <p class="recruit-text">私たちはデジタルトランスフォーメーションを推進する優秀な人材を求めています</p>
         <table class="recruit-info">
@@ -95,18 +95,18 @@
   <footer class="footer">
     <div class="footer-inner">
       <small class="footer copyright">Copyright 2020 TECH inc.</small>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
+          <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
+          <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
+          <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
+          <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
+          <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav class="footer-nav">
-      <ul class="footer-nav-list">
-        <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
-        <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
-        <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
-        <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-        <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
-        <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-        <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
-      </ul>
-    </nav>
   </footer>  
 </body>
 </html>
