--- a/html/index.html
+++ b/html/index.html
@@ -5,21 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>株式会社TECH</title>
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
   <header class="top-header">
-    <h1 class="header-logo"><a href="/html/index.html">TECH</a></h1>
+    <h1 class="header-logo"><a href="../html/index.html">TECH</a></h1>
     <nav class="header-nav">
       <ul class="header-nav-list">
-        <li class="header-nav-item"><a href="/html/index.html">ホーム</a></li>
-        <li class="header-nav-item"><a href="/html/service.html">事業内容</a></li>
-        <li class="header-nav-item"><a href="/html/news.html">ニュース</a></li>
-        <li class="header-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-        <li class="header-nav-item"><a href="/html/company.html">会社概要</a></li>
-        <li class="header-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-        <li class="header-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+        <li class="header-nav-item"><a href="../html/index.html">ホーム</a></li>
+        <li class="header-nav-item"><a href="../html/service.html">事業内容</a></li>
+        <li class="header-nav-item"><a href="../html/news.html">ニュース</a></li>
+        <li class="header-nav-item"><a href="../html/blog.html">社員ブログ</a></li>
+        <li class="header-nav-item"><a href="../html/company.html">会社概要</a></li>
+        <li class="header-nav-item"><a href="../html/recruit.html">採用情報</a></li>
+        <li class="header-nav-item"><a href="../html/contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
     <div id="hamburger">
@@ -46,40 +46,40 @@
       <div class="service-list">
         <section class="service-item">
           <div class="service-item-img">
-            <img src="/img/service1.png" alt="IT人材育成事業">
+            <img src="../img/service1.png" alt="IT人材育成事業">
           </div>
           <h3 class="service-item-title">IT人材育成事業</h3>
           <p class="service-item-txt">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
         </section>
         <section class="service-item">
           <div class="service-item-img">
-            <img src="/img/service2.png" alt="コーチング事業">
+            <img src="../img/service2.png" alt="コーチング事業">
           </div>
           <h3 class="service-item-title">コーチング事業</h3>
           <p class="service-item-txt">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>
         </section>
         <section class="service-item">
           <div class="service-item-img">
-            <img src="/img/service3.png" alt="ITコンサル事業">
+            <img src="../img/service3.png" alt="ITコンサル事業">
           </div>
           <h3 class="service-item-title">ITコンサル事業</h3>
           <p class="service-item-txt">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</p>
         </section>
         <section class="service-item">
           <div class="service-item-img">
-            <img src="/img/service4.png" alt="デジタルトランスフォーメーション事業">
+            <img src="../img/service4.png" alt="デジタルトランスフォーメーション事業">
           </div>
           <h3 class="service-item-title">デジタルトランスフォーメーション事業</h3>
           <p class="service-item-txt">人々の生活をよりよいものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
         </section>
       </div>
-      <a href="/html/service.html" class="service-btn btn btn-primary">サービス一覧をみる</a>
+      <a href="../html/service.html" class="service-btn btn btn-primary">サービス一覧をみる</a>
     </section>
    <section class="news">
      <div class="news-inner">
        <div class="news-head">
          <h2 class="news-title">ニュース</h2>
-         <a href="/html/news.html" class="news-btn btn btn-primary">ニュース一覧をみる</a>
+         <a href="../html/news.html" class="news-btn btn btn-primary">ニュース一覧をみる</a>
        </div>
        <div class="news-list">
         <article class="news-item">
@@ -108,34 +108,34 @@
      <div class="blog-list">
        <article class="blog-item">
          <a href="#" class="blog-item-thumbnail">
-           <img src="/img/blog.png" alt="会社を創業した理由">
+           <img src="../img/blog.png" alt="会社を創業した理由">
          </a>
          <p class="blog-item-date">2019/07/17</p>
          <h3 class="blog-item-title">会社を創業した理由</h3>
        </article>
        <article class="blog-item">
         <a href="#" class="blog-item-thumbnail">
-          <img src="/img/blog.png" alt="ITエンジニアを育成する最強メソッド">
+          <img src="../img/blog.png" alt="ITエンジニアを育成する最強メソッド">
         </a>
         <p class="blog-item-date">2019/11/11</p>
         <h3 class="blog-item-title">ITエンジニアを育成する最強メソッド</h3>
       </article>
       <article class="blog-item">
         <a href="#" class="blog-item-thumbnail">
-          <img src="/img/blog.png" alt="コーチングによるモチベーション向上理論">
+          <img src="../img/blog.png" alt="コーチングによるモチベーション向上理論">
         </a>
         <p class="blog-item-date">2020/08/01</p>
         <h3 class="blog-item-title">コーチングによるモチベーション向上理論</h3>
       </article>
      </div>
-     <a href="/html/blog.html" class="blog-btn btn btn-primary">サービス一覧をみる</a>
+     <a href="../html/blog.html" class="blog-btn btn btn-primary">サービス一覧をみる</a>
    </section>
    <div class="company-list">
       <section class="company-item">
-        <a href="/html/company.html" class="company-link">会社概要</a>
+        <a href="../html/company.html" class="company-link">会社概要</a>
       </section>
       <section class="company-item">
-        <a href="/html/recruit.html" class="recruit-link">採用情報</a>
+        <a href="../html/recruit.html" class="recruit-link">採用情報</a>
       </section>
     </div>
     <section id="contact">
@@ -143,7 +143,7 @@
         <h2 class="contact-title">お問い合わせ</h2>
         <p class="contact-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
       </div>
-      <a href="/html/contact.html" class="contact-btn btn btn-primary">お問い合わせ</a>
+      <a href="../html/contact.html" class="contact-btn btn btn-primary">お問い合わせ</a>
     </section>
   </main>
   <footer class="footer">
@@ -151,13 +151,13 @@
       <small class="footer copyright">Copyright 2020 TECH inc.</small>
       <nav class="footer-nav">
         <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
-          <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
-          <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
-          <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-          <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
-          <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-          <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+          <li class="footer-nav-item"><a href="../html/index.html">ホーム</a></li>
+          <li class="footer-nav-item"><a href="../html/service.html">事業内容</a></li>
+          <li class="footer-nav-item"><a href="../html/news.html">ニュース</a></li>
+          <li class="footer-nav-item"><a href="../html/blog.html">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="../html/company.html">会社概要</a></li>
+          <li class="footer-nav-item"><a href="../html/recruit.html">採用情報</a></li>
+          <li class="footer-nav-item"><a href="../html/contact.html">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
