--- a/html/service.html
+++ b/html/service.html
@@ -5,21 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>株式会社TECH</title>
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="stylesheet" href="/css/service.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/service.css">
 </head>
 <body>
   <header class="top-header">
-    <h1 class="header-logo"><a href="/html/index.html">TECH</a></h1>
+    <h1 class="header-logo"><a href="../html/index.html">TECH</a></h1>
     <nav class="header-nav">
       <ul class="header-nav-list">
-        <li class="header-nav-item"><a href="/html/index.html">ホーム</a></li>
-        <li class="header-nav-item"><a href="/html/service.html">事業内容</a></li>
-        <li class="header-nav-item"><a href="/html/news.html">ニュース</a></li>
-        <li class="header-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-        <li class="header-nav-item"><a href="/html/company.html">会社概要</a></li>
-        <li class="header-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-        <li class="header-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+        <li class="header-nav-item"><a href="../html/index.html">ホーム</a></li>
+        <li class="header-nav-item"><a href="../html/service.html">事業内容</a></li>
+        <li class="header-nav-item"><a href="../html/news.html">ニュース</a></li>
+        <li class="header-nav-item"><a href="../html/blog.html">社員ブログ</a></li>
+        <li class="header-nav-item"><a href="../html/company.html">会社概要</a></li>
+        <li class="header-nav-item"><a href="../html/recruit.html">採用情報</a></li>
+        <li class="header-nav-item"><a href="../html/contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
     <div id="hamburger">
@@ -36,7 +36,7 @@
       <div class="service-list">
         <section class="service-item">
           <div class="service-item-img">
-            <img src="/img/service1.png" alt="IT人材育成事業">
+            <img src="../img/service1.png" alt="IT人材育成事業">
           </div>
           <div class="service-item-detail">
             <h2 class="service-item-title">IT人材育成事業</h2>
@@ -45,7 +45,7 @@
         </section>
         <section class="service-item">
           <div class="service-item-img">
-            <img src="/img/service2.png" alt="コーチング事業">
+            <img src="../img/service2.png" alt="コーチング事業">
           </div>
           <div class="service-item-detail">
             <h2 class="service-item-title">コーチング事業</h2>
@@ -54,7 +54,7 @@
         </section>
         <section class="service-item">
           <div class="service-item-img">
-            <img src="/img/service3.png" alt="ITコンサル事業">
+            <img src="../img/service3.png" alt="ITコンサル事業">
           </div>
           <div class="service-item-detail">
             <h2 class="service-item-title">ITコンサル事業</h2>
@@ -63,7 +63,7 @@
         </section>
         <section class="service-item">
           <div class="service-item-img">
-            <img src="/img/service4.png" alt="デジタルトランスフォーメーション事業">
+            <img src="../img/service4.png" alt="デジタルトランスフォーメーション事業">
           </div>
           <div class="service-item-detail">
             <h2 class="service-item-title">デジタルトランスフォーメーション事業</h2>
@@ -77,7 +77,7 @@
         <h2 class="contact-title">お問い合わせ</h2>
         <p class="contact-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
       </div>
-      <a href="/html/contact.html" class="contact-btn">お問い合わせ</a>
+      <a href="../html/contact.html" class="contact-btn">お問い合わせ</a>
     </section>
   </main>
   <footer>
@@ -85,13 +85,13 @@
       <small class="footer copyright">Copyright 2020 TECH inc.</small>
       <nav class="footer-nav">
         <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
-          <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
-          <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
-          <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-          <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
-          <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-          <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+          <li class="footer-nav-item"><a href="../html/index.html">ホーム</a></li>
+          <li class="footer-nav-item"><a href="../html/service.html">事業内容</a></li>
+          <li class="footer-nav-item"><a href="../html/news.html">ニュース</a></li>
+          <li class="footer-nav-item"><a href="../html/blog.html">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="../html/company.html">会社概要</a></li>
+          <li class="footer-nav-item"><a href="../html/recruit.html">採用情報</a></li>
+          <li class="footer-nav-item"><a href="../html/contact.html">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
