--- a/html/company.html
+++ b/html/company.html
@@ -5,21 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>株式会社TECH</title>
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="stylesheet" href="/css/company.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/company.css">
 </head>
 <body>
   <header class="top-header">
-    <h1 class="header-logo"><a href="/html/index.html">TECH</a></h1>
+    <h1 class="header-logo"><a href="../html/index.html">TECH</a></h1>
     <nav class="header-nav">
       <ul class="header-nav-list">
-        <li class="header-nav-item"><a href="/html/index.html">ホーム</a></li>
-        <li class="header-nav-item"><a href="/html/service.html">事業内容</a></li>
-        <li class="header-nav-item"><a href="/html/news.html">ニュース</a></li>
-        <li class="header-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-        <li class="header-nav-item"><a href="/html/company.html">会社概要</a></li>
-        <li class="header-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-        <li class="header-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+        <li class="header-nav-item"><a href="../html/index.html">ホーム</a></li>
+        <li class="header-nav-item"><a href="../html/service.html">事業内容</a></li>
+        <li class="header-nav-item"><a href="../html/news.html">ニュース</a></li>
+        <li class="header-nav-item"><a href="../html/blog.html">社員ブログ</a></li>
+        <li class="header-nav-item"><a href="../html/company.html">会社概要</a></li>
+        <li class="header-nav-item"><a href="../html/recruit.html">採用情報</a></li>
+        <li class="header-nav-item"><a href="../html/contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
     <div id="hamburger">
@@ -69,7 +69,7 @@
         <h2 class="contact-title">お問い合わせ</h2>
         <p class="contact-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
       </div>
-      <a href="/html/contact.html" class="contact-btn btn btn-primary">お問い合わせ</a>
+      <a href="../html/contact.html" class="contact-btn btn btn-primary">お問い合わせ</a>
     </section>
   </main>
   <footer class="footer">
@@ -77,13 +77,13 @@
       <small class="footer copyright">Copyright 2020 TECH inc.</small>
       <nav class="footer-nav">
         <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
-          <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
-          <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
-          <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-          <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
-          <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-          <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+          <li class="footer-nav-item"><a href="../html/index.html">ホーム</a></li>
+          <li class="footer-nav-item"><a href="../html/service.html">事業内容</a></li>
+          <li class="footer-nav-item"><a href="../html/news.html">ニュース</a></li>
+          <li class="footer-nav-item"><a href="../html/blog.html">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="../html/company.html">会社概要</a></li>
+          <li class="footer-nav-item"><a href="../html/recruit.html">採用情報</a></li>
+          <li class="footer-nav-item"><a href="../html/contact.html">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
