--- a/html/contact.html
+++ b/html/contact.html
@@ -5,21 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>株式会社TECH</title>
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="stylesheet" href="/css/contact.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/contact.css">
 </head>
 <body>
   <header class="top-header">
-    <h1 class="header-logo"><a href="/html/index.html">TECH</a></h1>
+    <h1 class="header-logo"><a href="../html/index.html">TECH</a></h1>
     <nav class="header-nav">
       <ul class="header-nav-list">
-        <li class="header-nav-item"><a href="/html/index.html">ホーム</a></li>
-        <li class="header-nav-item"><a href="/html/service.html">事業内容</a></li>
-        <li class="header-nav-item"><a href="/html/news.html">ニュース</a></li>
-        <li class="header-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-        <li class="header-nav-item"><a href="/html/company.html">会社概要</a></li>
-        <li class="header-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-        <li class="header-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+        <li class="header-nav-item"><a href="../html/index.html">ホーム</a></li>
+        <li class="header-nav-item"><a href="../html/service.html">事業内容</a></li>
+        <li class="header-nav-item"><a href="../html/news.html">ニュース</a></li>
+        <li class="header-nav-item"><a href="../html/blog.html">社員ブログ</a></li>
+        <li class="header-nav-item"><a href="../html/company.html">会社概要</a></li>
+        <li class="header-nav-item"><a href="../html/recruit.html">採用情報</a></li>
+        <li class="header-nav-item"><a href="../html/contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
     <div id="hamburger">
@@ -35,7 +35,7 @@
   </div>
   <main>
     <section class="contact-wrap">
-      <form class="contact-form" action="/html/index.html" method="POST">
+      <form class="contact-form" action="../html/index.html" method="POST">
         <div class="contact-form-item">
           <label for="company" class="contact-form-item-name">会社名</label>
           <input type="text" id="company" class="contact-form-item-input">
@@ -70,13 +70,13 @@
       <small class="footer copyright">Copyright 2020 TECH inc.</small>
       <nav class="footer-nav">
         <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="/html/index.html">ホーム</a></li>
-          <li class="footer-nav-item"><a href="/html/service.html">事業内容</a></li>
-          <li class="footer-nav-item"><a href="/html/news.html">ニュース</a></li>
-          <li class="footer-nav-item"><a href="/html/blog.html">社員ブログ</a></li>
-          <li class="footer-nav-item"><a href="/html/company.html">会社概要</a></li>
-          <li class="footer-nav-item"><a href="/html/recruit.html">採用情報</a></li>
-          <li class="footer-nav-item"><a href="/html/contact.html">お問い合わせ</a></li>
+          <li class="footer-nav-item"><a href="../html/index.html">ホーム</a></li>
+          <li class="footer-nav-item"><a href="../html/service.html">事業内容</a></li>
+          <li class="footer-nav-item"><a href="../html/news.html">ニュース</a></li>
+          <li class="footer-nav-item"><a href="../html/blog.html">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="../html/company.html">会社概要</a></li>
+          <li class="footer-nav-item"><a href="../html/recruit.html">採用情報</a></li>
+          <li class="footer-nav-item"><a href="../html/contact.html">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
