--- a/html/index.html
+++ b/html/index.html
@@ -22,10 +22,10 @@
         <li class="header-nav-item"><a href="../html/contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
-    <div id="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
+    <div class="hamburger">
+      <span class="menu-line-top"></span>
+      <span class="menu-line-middle"></span>
+      <span class="menu-line-bottom"></span>
     </div>
   </header>
   <main>
