--- a/html/recruit.html
+++ b/html/recruit.html
@@ -22,7 +22,7 @@
         <li class="header-nav-item"><a href="../html/contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
-    <div id="hamburger">
+    <div class="hamburger">
       <span></span>
       <span></span>
       <span></span>
