--- a/html/blog.html
+++ b/html/blog.html
@@ -23,9 +23,9 @@
       </ul>
     </nav>
     <div class="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
+      <span class="menu-line-top"></span>
+      <span class="menu-line-middle"></span>
+      <span class="menu-line-bottom"></span>
     </div>
   </header>
   <div id="firstview">
