--- a/html/index.html
+++ b/html/index.html
@@ -148,7 +148,7 @@
   </main>
   <footer class="footer">
     <div class="footer-inner">
-      <small class="footer copyright">Copyright 2020 TECH inc.</small>
+      <small class="footer-copyright">Copyright 2020 TECH inc.</small>
       <nav class="footer-nav">
         <ul class="footer-nav-list">
           <li class="footer-nav-item"><a href="../html/index.html">ホーム</a></li>
