--- a/html/service.html
+++ b/html/service.html
@@ -23,9 +23,9 @@
       </ul>
     </nav>
     <div class="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
+      <span class="menu-line-top"></span>
+      <span class="menu-line-middle"></span>
+      <span class="menu-line-bottom"></span>
     </div>
   </header>
   <main>
@@ -82,7 +82,7 @@
   </main>
   <footer>
     <div class="footer-inner">
-      <small class="footer copyright">Copyright 2020 TECH inc.</small>
+      <small class="footer-copyright">Copyright 2020 TECH inc.</small>
       <nav class="footer-nav">
         <ul class="footer-nav-list">
           <li class="footer-nav-item"><a href="../html/index.html">ホーム</a></li>
